<resources>
    <string name="app_name">博客系统2</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="not_account_question">还没有账号？</string>
    <string name="forget_password">忘记密码</string>
    <string name="set_password">设置密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_restricted_characters">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="already_have_an_account">已有账号？请</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="reinput_password">请再次输入密码</string>
    <string name="reset_password">重置密码</string>
    <string name="input_valid_phone_number">请输入有效的手机号码</string>
    <string name="input_double_password_different">两次输入的密码不一致</string>
    <string name="input_valid_format_password">请输入6&#8211;15位数字+大写字母+小写字母组合的密码</string>
    <string name="operation_successful">操作成功</string>
    <string name="operation_failed">操作失败</string>
    <string name="login_success">登录成功</string>
    <string name="copy_success">复制成功</string>
    <string name="modifiy_success">修改成功</string>
    <string name="please_login">请先登录</string>
    <string name="please_upload_avatar">请选择头像</string>
    <string name="network_error">网络似乎丢失了，刷新一下吧</string>
    <string name="refresh">刷新</string>
    <string name="login_failure_try">登录失败，请重试</string>
    <string name="recover_word">恢复码</string>
    <string name="input_recover_word">请输入恢复码</string>
    <string name="back">返回</string>
</resources>